--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cookie-session": "^1.3.3",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "joi": "^14.3.1",
